// Copyright 2021 lack
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
// This file was autogenerated by goproto-gen. Do not edit it manually!

syntax = 'proto2';

package github.com.lack_io.pkg.zfs;

// Package-wide variables from generator "generated".
option go_package = "zfs";

// Pool
// +gogo:deepcopy-gen=true
// +gogo:genproto=true
message Pool {
  optional string name = 1;

  // zfs pool 容量
  optional string size = 2;

  optional string capacity = 3;

  optional string altRoot = 4;

  optional string health = 5;

  optional string guid = 6;

  optional string version = 7;

  optional string bootFs = 8;

  optional string delegation = 9;

  optional string autoReplace = 10;

  optional string cacheFile = 11;

  optional string failMode = 12;

  optional string listSnapshots = 13;

  optional string autoExpand = 14;

  optional string dedupDitto = 15;

  optional string dedupRatio = 16;

  // zfs pool 可用空间
  optional string free = 17;

  // zfs pool 已分配空间
  optional string allocated = 18;

  optional string readonly = 19;

  optional string aShift = 20;

  optional string comment = 21;

  optional string expandSize = 22;

  optional string freeing = 23;

  optional string fragmentation = 24;

  optional string leaked = 25;

  optional string multihost = 26;

  optional string featureAsyncDestroy = 27;

  optional string featureEmptyBpobj = 28;

  optional string featureLz4Compress = 29;

  optional string featureMultiVdevCrashDump = 30;

  optional string featureSpaceMapHistogram = 31;

  optional string featureEnabledTxg = 32;

  optional string featureHoleBirth = 33;

  optional string featureExtensibleDataset = 34;

  optional string featureEmbeddedData = 35;

  optional string featureBookmarks = 36;

  optional string featureFilesystemLimits = 37;

  optional string featureLargeBlocks = 38;

  optional string featureLargeDnode = 39;

  optional string featureSha512 = 40;

  optional string featureSkein = 41;

  optional string featureEdonr = 42;

  optional string featureUserobjAccounting = 43;

  // tank filesystem
  optional string type = 44;

  optional string creation = 45;

  optional string used = 46;

  optional string available = 47;

  optional string referenced = 48;

  optional string compressRatio = 49;

  optional string mounted = 50;

  optional string quota = 51;

  optional string reservation = 52;

  optional string recordSize = 53;

  optional string mountPoint = 54;

  optional string sharenFs = 55;

  optional string checksum = 56;

  optional string compression = 57;

  optional string aTime = 58;

  optional string devices = 59;

  optional string exec = 60;

  optional string setUid = 61;

  optional string zoned = 62;

  optional string snapDir = 63;

  optional string aclinHerit = 64;

  optional string createtxg = 65;

  optional string canMount = 66;

  optional string xattr = 67;

  optional string copies = 68;

  optional string utf8Only = 69;

  optional string normalization = 70;

  optional string casesensitivity = 71;

  optional string vscan = 72;

  optional string nbmand = 73;

  optional string sharesmb = 74;

  optional string refquota = 75;

  optional string refreservation = 76;

  optional string primarycache = 77;

  optional string secondarycache = 78;

  optional string usedbysnapshots = 79;

  optional string usedbydataset = 80;

  optional string usedbychildren = 81;

  optional string usedbyrefreservation = 82;

  optional string logbias = 83;

  optional string dedup = 84;

  optional string mlslabel = 85;

  optional string sync = 86;

  optional string dnodesize = 87;

  optional string refcompressratio = 88;

  optional string written = 89;

  optional string logicalused = 90;

  optional string logicalreferenced = 91;

  optional string volmode = 92;

  optional string filesystemLimit = 93;

  optional string snapshotLimit = 94;

  optional string filesystemCount = 95;

  optional string snapshotCount = 96;

  optional string snapdev = 97;

  optional string acltype = 98;

  optional string context = 99;

  optional string fscontext = 100;

  optional string defcontext = 101;

  optional string rootcontext = 102;

  optional string relatime = 103;

  optional string redundantMetadata = 104;

  optional string overlay = 105;

  optional string encryption = 106;

  optional string keylocation = 107;

  optional string keyformat = 108;

  optional string pbkdf2Iters = 109;

  optional string specialSmallBlocks = 110;
}

// Snapshot
// +gogo:deepcopy-gen=true
// +gogo:genproto=true
message Snapshot {
  optional string parent = 1;

  optional string name = 2;

  optional string type = 3;

  optional string creation = 4;

  optional string used = 5;

  optional string referenced = 6;

  optional string compressratio = 7;

  optional string devices = 8;

  optional string exec = 9;

  optional string setuid = 10;

  optional string createtxg = 11;

  optional string version = 12;

  optional string utf8Only = 13;

  optional string normalization = 14;

  optional string casesensitivity = 15;

  optional string vscan = 16;

  optional string nbmand = 17;

  optional string guid = 18;

  optional string primarycache = 19;

  optional string secondarycache = 20;

  optional string deferDestroy = 21;

  optional string userrefs = 22;

  optional string mlslabel = 23;

  optional string refcompressratio = 24;

  optional string written = 25;

  optional string logicalreferenced = 26;

  optional string acltype = 27;

  optional string context = 28;

  optional string fscontext = 29;

  optional string defcontext = 30;

  optional string rootcontext = 31;
}

// Volume
// +gogo:deepcopy-gen=true
// +gogo:genproto=true
message Volume {
  optional string name = 1;

  optional string source = 2;

  optional string type = 3;

  optional string creation = 4;

  optional string used = 5;

  optional string available = 6;

  optional string referenced = 7;

  optional string compressratio = 8;

  optional string reservation = 9;

  optional string volsize = 10;

  optional string volblocksize = 11;

  optional string checksum = 12;

  optional string compression = 13;

  optional string readonly = 14;

  optional string copies = 15;

  optional string refreservation = 16;

  optional string guid = 17;

  optional string primarycache = 18;

  optional string secondarycache = 19;

  optional string usedbysnapshots = 20;

  optional string usedbydataset = 21;

  optional string usedbychildren = 22;

  optional string usedbyrefreservation = 23;

  optional string logbias = 24;

  optional string dedup = 25;

  optional string mlslabel = 26;

  optional string sync = 27;

  optional string refcompressratio = 28;

  optional string written = 29;

  optional string logicalused = 30;

  optional string logicalreferenced = 31;

  optional string volmode = 32;

  optional string filesystemLimit = 33;

  optional string snapshotLimit = 34;

  optional string snapshotCount = 35;

  optional string snapdev = 36;

  optional string acltype = 37;

  optional string context = 38;

  optional string fscontext = 39;

  optional string defcontext = 40;

  optional string rootcontext = 41;

  optional string redundantMetadata = 42;
}

